# dotorixel

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  lefthook.yml  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
apple/: Cargo.toml  project.yml
apple/Dotorixel/: ContentView.swift  Dotorixel-Bridging-Header.h  DotorixelApp.swift  Localizable.xcstrings
apple/Dotorixel/Benchmark/: RenderBenchmarkView.swift
apple/Dotorixel/Data/: DefaultPalette.swift
apple/Dotorixel/Export/: PngExportDocument.swift
apple/Dotorixel/Extensions/: Color+Hsv.swift  Color+SwiftUI.swift  ToolType+DisplayName.swift
apple/Dotorixel/Rendering/: InputMTKView.swift  (+4 more)
apple/DotorixelTests/: CanvasBindingsTests.swift  ConstrainStrokeTests.swift  DesignTokensTests.swift  DockedRegionSnapshotTests.swift  EditorStateTests.swift  EditorToolTests.swift  EyedropperSessionTests.swift  EyedropperStrokeSessionTests.swift  FloodFillSessionTests.swift  GeometryBindingsTests.swift  HsvColorTests.swift  HsvPickerModelTests.swift  KeyboardShortcutControllerTests.swift  LayoutTierTests.swift  LocalizationTests.swift  LoupePositionTests.swift  LoupeViewSnapshotTests.swift  MoveStrokeSessionTests.swift  PixelPerfectStrokeTests.swift  PngExportTests.swift  README.md  RecentColorsTests.swift  SampleGridTests.swift  SamplingLoupeTests.swift  ShapeStrokeSessionTests.swift  StrokeEngineTests.swift  ToolConstraintsTests.swift  ToolTypeTests.swift  TouchStrokeRouterTests.swift
apple/scripts/: build-rust.sh
apple/src/: lib.rs
crates/core/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+886 files in other folders)
