[package]
name = "dotorixel-core"
version = "0.0.1"
edition = "2024"
rust-version = "1.85.0"
license = "AGPL-3.0-or-later"
description = "Core logic for the DOTORIXEL pixel art editor"

[dependencies]
png = "0.17"
serde = { version = "1", features = ["derive"] }
uniffi = { version = "0.31", optional = true }
uuid = "1"

[dev-dependencies]
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[features]
uniffi = ["dep:uniffi"]
